@@ -2,39 +2,45 @@ Getting Started
 ===============
 
 This book is built around small Java programs that can be read in the browser
-and run from a local development environment. The examples use ordinary Java
-source files under a Maven project layout, so the same commands work from a
-terminal, an IDE, or the Docker image described in the preface.
+and run from a local development environment. The core examples target
+``JDK 25``, the latest long-term support release, so the syntax stays current
+without depending on preview language features.
 
-Version used by the examples
-----------------------------
+Version baseline
+----------------
+
+Use JDK 25 for the main book examples. JDK 26 is the latest feature release,
+but JDK 25 is the better default for an introductory book because it is the
+current LTS release.
 
 The main example project is in ``source/code`` and is configured with Maven.
-Its ``pom.xml`` sets the compiler release to Java 13 and enables preview
+Its ``pom.xml`` sets the compiler release to JDK 25 and does not enable preview
 features.
 
 .. literalinclude:: code/pom.xml
    :language: xml
-   :lines: 11-26
+   :lines: 11-24
    :dedent: 2
 
-There is also a smaller project in ``source/java-14`` that demonstrates records,
-stream additions, tuples, and Lombok. That project is configured separately and
-uses Java 15 preview settings.
+Preview features are covered separately in the JDK 26 notes. Keep preview code
+out of the main examples unless the chapter explicitly says otherwise.
 
-.. literalinclude:: java-14/pom.xml
-   :language: xml
-   :lines: 11-29
-   :dedent: 2
+Running compact source files
+----------------------------
 
-When you are running examples locally, use the JDK version expected by the
-project you are compiling. If you use a newer JDK, Maven may still compile many
-examples, but preview features and old preview syntax can require adjustment.
+JDK 25 can run a small Java file directly.
+
+.. code-block:: bash
+
+   java hello.java
+
+This is the easiest way to try the first chapter. It does not require a Maven
+project, a package declaration, or a separate compilation step.
 
 Running with Docker
 -------------------
 
-The simplest path is to use the Docker image from the preface.
+The Docker image from the preface starts Jupyter Lab on port ``8888``.
 
 .. code-block:: bash
 
@@ -42,8 +48,9 @@ The simplest path is to use the Docker image from the preface.
      -p 8888:8888 \
      oneoffcoder/book-java-intro
 
-The container starts Jupyter Lab on port ``8888``. Open
-``http://localhost:8888`` after the container is running.
+Open ``http://localhost:8888`` after the container is running. If the published
+image lags behind the book's JDK 25 baseline, use a local JDK 25 installation
+for the newer language examples.
 
 Running with Maven
 ------------------
@@ -62,19 +69,18 @@ class name.
 
    cd source/code
    mvn test
-   java --enable-preview \
-     -cp target/classes:target/dependency/* \
-     com.oneoffcoder.java.intro.HelloWorld
+   java -cp target/classes com.oneoffcoder.java.intro.HelloWorld
 
-On Windows, use ``;`` instead of ``:`` between classpath entries.
+Examples that depend on external libraries, such as OpenCSV, are easiest to run
+from Maven, Jupyter, or an IDE that understands the ``pom.xml`` file.
 
 Reading examples in this book
 -----------------------------
 
 Most chapters show only the lines that matter for the topic being discussed.
 The complete source files are under ``source/code/src/main/java``. For example,
-the first program appears in the book as a short listing, but the full file is
-available at ``source/code/src/main/java/com/oneoffcoder/java/intro``.
+the first class-based program appears in the book as a short listing, but the
+full file is available at ``source/code/src/main/java/com/oneoffcoder/java/intro``.
 
 .. literalinclude:: code/src/main/java/com/oneoffcoder/java/intro/HelloWorld.java
    :language: java
